# Livox-MID360-Diagnostics

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: DEPLOYMENT.md  DISCOVERY_AND_CONFIG.md  GUI.md  SAFETY.md
examples/: MID360_config.example.json
gui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
gui/src/: AboutDialog.tsx  App.tsx  ErrorBoundary.tsx  PointCloudPreview.tsx  preview-types.ts  runtime.ts  styles.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: lib.rs  main.rs
scripts/: build_cpp_with_sdk2.sh  check_offline.sh  clean_workspace.sh  package_cpp_prebuilt.sh  prepare_config.sh  run_ros2_mid360_rviz.sh  setup_cpp.sh  setup_python.sh  update_submodules.sh  use_cpp_release.sh
scripts/release/: extract_changelog.py  validate_release.py
src/cpp/: mid360_config_tool.cpp  mid360_diagnostics.cpp  mid360_sdk_dump.cpp  mid360_sdk_monitor.cpp  mid360_sdk_preview.cpp  neon_tui.hpp  network_autobind.hpp
src/python/livox_mid360_diagnostics/: __init__.py  __main__.py  autoconfig.py  neon_tui.py  udp_monitor.py
tests/: test_autoconfig.py  test_udp_monitor.py
