[package]
name = "livox-mid360-diagnostics-gui"
version = "2.1.0"
description = "Tauri desktop demo for Livox MID360 Diagnostics"
authors = ["Jasonzzhu0514"]
edition = "2021"

[lib]
name = "livox_mid360_diagnostics_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = ["shell-open"] }
libc = "0.2"

[features]
custom-protocol = ["tauri/custom-protocol"]
